--- a/templates/countries/countries.html
+++ b/templates/countries/countries.html
@@ -25,12 +25,8 @@
         <tbody>
             {%  for i in data %}
                 <tr>
-                    <td>{{i.name.common}}</td>
-                    <td>
-                        {% for k in i.capital %}
-                                {{k}}
-                            {% endfor %}
-                    </td>
+                    <td>{{i.name}}</td>
+                    <td>{{i.capital}}</td>
                     <td>{{i.population}}</td>
                     <td>
                         <ul>
@@ -40,7 +36,7 @@
                         </ul>
                     </td>
                     <td>
-                        <div style="content: 10px;">{{i.flag}}</div>
+                       <img src="{{i.flag}}" height="100" alt="">
                     </td>
                 </tr>
             {% endfor %}
